feat: m13 -  configurable position sizing
